<resources>
    <string name="app_name">UniverseBuilder</string>
    <string name="entrar">ENTRAR</string>
    <string name="registrar">REGISTRAR</string>
    <string name="universe_builder">UNIVERSE BUILDER</string>
    <string name="todo">TODO</string>
    <string name="nombre">Nombre</string>
    <string name="contrasena">Contraseña</string>
    <string name="repetir_contrasena">Repetir contraseña</string>
    <string name="espada">espada</string>
    <string name="volver_atras">Volver atrás</string>
    <string name="e_mail">E-mail</string>
    <string name="contrase_a">Contraseña</string>
    <string name="navigation_drawer_open">Abrir drawer de navegación</string>
    <string name="navigation_drawer_close">Cerrar drawer de navegación</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descripcion_crear_uni">Crear nuevo universo</string>
    <string name="cambiar_nombre">CAMBIAR NOMBRE</string>
    <string name="cambiar_pass">CAMBIAR CONTRASEÑA</string>
    <string name="nombre_correcto">Nombre cambiado correctamente</string>
    <string name="passCorrecta">Contraseña cambiada correctamente</string>
    <string name="descripcion">descripcion</string>
    <string name="publico">Público</string>
    <string name="nombreUniverso">NOMBRE DE TU UNIVERSO</string>
    <string name="descripcionUniverso">DESCRIPCIÓN DE TU UNIVERSO</string>
    <string name="visibilidad">VISIBILIDAD DE TU UNIVERSO</string>
    <string name="etiquetas">Etiquetas</string>
    <string name="etiquetasUniverso">ETIQUETAS DE TU UNIVERSO</string>
    <string name="avisoEtiquetas">No puedes introducir más etiquetas</string>
    <string name="crear_universo">CREAR UNIVERSO</string>
    <string name="crear_etiqueta">crear etiqueta</string>
    <string name="avisoEtiquetasLongitud">La etiqueta es demasiado larga</string>
    <string name="editar_universo">universo</string>
    <string name="boton_editar_universo">EDITAR UNIVERSO</string>
    <string name="crear_pagina">nueva página</string>
    <string name="editar_paginas">editar páginas</string>
    <string name="avisoNombre">El nombre no puede estar vacío</string>
    <string name="avisoIcono">Selecciona un icono</string>
    <string name="titulo">Título</string>
    <string name="contenido">contenido</string>
    <string name="borrar">Borrar</string>
    <string name="pie_de_foto">Pie de foto(Opcional)</string>
    <string name="imagen_fail">Error subiendo la imagen</string>
    <string name="ok">CONFIRMAR</string>
    <string name="action_search">buscar</string>
    <string name="categorias">Categorias</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="Buscar">Buscar</string>
    <string name="populares">Populares</string>
    <string name="explorar">Explorar</string>
</resources>