<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UniversoAjustesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fondos"
        tools:context=".NuevoUniverso">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/botonEditarUniverso"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/arvo"
                android:text="@string/boton_editar_universo"
                android:textColor="#000077"
                android:textSize="30sp"
                app:backgroundTint="#FF7700"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchMaterialEditar"
                app:layout_constraintVertical_bias="0.205" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/etiquetasUniverso"
                android:textColor="@color/textos"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/outlinedTextFieldEtiquetasEditar"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldDescripcionUniversoEditar" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/visibilidad"
                android:textColor="@color/textos"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/switchMaterialEditar"
                app:layout_constraintTop_toBottomOf="@+id/chipGroupEditar" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/descripcionUniverso"
                android:textColor="@color/textos"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/outlinedTextFieldDescripcionUniversoEditar"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldNombreUniversoEditar" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldNombreUniversoEditar"
                style="@style/BlancoTextInputLayoutStyle"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/nombre"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:counterTextColor="@color/textos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextNombreUniversoEditar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textColor="@color/textos" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldDescripcionUniversoEditar"
                style="@style/BlancoTextInputLayoutStyle"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/descripcion"
                app:counterEnabled="true"
                app:counterMaxLength="150"
                app:counterTextColor="@color/textos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextDescripcionUniversoEditar"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:textColor="@color/textos" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchMaterialEditar"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/publico"
                android:textColor="@color/textos"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/nombreUniverso"
                android:textColor="@color/textos"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/outlinedTextFieldNombreUniversoEditar"
                app:layout_constraintTop_toBottomOf="@+id/texto_aviso_editar" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldEtiquetasEditar"
                style="@style/BlancoTextInputLayoutStyle"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/etiquetas"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:counterTextColor="@color/textos"
                app:endIconDrawable="@drawable/baseline_check_circle_24"
                app:endIconMode="custom"
                app:endIconTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextEtiquetasEditar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="@color/textos" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupEditar"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldEtiquetasEditar">


            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/texto_aviso_editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#FF0000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintBottom_toTopOf="@+id/outlinedTextFieldEtiquetasEditar"
                app:layout_constraintEnd_toEndOf="@+id/outlinedTextFieldEtiquetasEditar"
                app:layout_constraintHorizontal_bias="0.964"
                app:layout_constraintStart_toStartOf="@+id/outlinedTextFieldEtiquetasEditar"
                app:srcCompat="@drawable/outline_redo_white_24dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/coming_soon"
                android:text="@string/crear_etiqueta"
                android:textColor="@color/textos"
                app:layout_constraintBottom_toTopOf="@+id/outlinedTextFieldEtiquetasEditar"
                app:layout_constraintEnd_toStartOf="@+id/imageView7" />

        </androidx.constraintlayout.widget.ConstraintLayout>




    </ScrollView>

</FrameLayout>