<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeEditarPagina"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarPagina">


    <com.example.universebuilder.markeditor.EditorControlBar
        android:id="@+id/controlBarEditar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:id="@+id/layoutbotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/boton_cancelar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gris_claro"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/cancelar"
            android:textColor="@color/texto_boton"
            app:backgroundTint="@color/gris_claro" />

        <Button
            android:id="@+id/boton_confirmar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/fondo_boton"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/confirmar"
            android:textColor="@color/texto_boton"
            app:backgroundTint="@color/fondo_boton" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollEditorEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/controlBarEditar"
        android:layout_below="@+id/layoutbotones"
        android:background="@color/fondo_editor">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearCabeceraEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@color/textos"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldCategoriasEditar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/categorias"
                    android:textColorHint="@color/naranja_claro"
                    app:boxBackgroundColor="@color/fondos"
                    app:boxStrokeColor="@color/naranja_claro"
                    app:endIconDrawable="@drawable/baseline_check_circle_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/naranja_claro"
                    app:hintTextColor="@color/naranja_claro">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextCategoríasEditar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textColor="@color/naranja_claro" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupEditar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/fondos" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearMdEditorEditar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.example.universebuilder.markeditor.MarkDEditor
                    android:id="@+id/mdEditorEditar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</RelativeLayout>

